force-app/main/default/objects/Court__c/Court__c.object-meta.xml
<CustomObject>
    <label>Petition</label>
    <nameField>
        <displayFormat>Court-{000}</displayFormat>
        <label>Court Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Petitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>