force-app/main/default/objects/Court__c/fields/A_Detailed_Description_of_Home__c.field-meta.xml
<CustomField>
    <fullName>A_Detailed_Description_of_Home__c</fullName>
    <inlineHelpText>A. Detailed Description of Home Conditions (if relevant)</inlineHelpText>
    <label>A. Detailed Description of Home</label>
    <length>255</length>
    <type>Text</type>
</CustomField>