force-app/main/default/objects/Court__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>InActive</fullName>
            </value>
            <value>
                <fullName>InProgress</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Un-Requested</fullName>
            </value>
            <value>
                <fullName>Override</fullName>
            </value>
            <value>
                <fullName>Forward to Director</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Forward to Funding Approval</fullName>
            </value>
            <value>
                <fullName>Forward to Payment Approval</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Forwarded to Administrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>