force-app/main/default/objects/Court__c/fields/B_What_services_were_offered_efforts__c.field-meta.xml
<CustomField>
    <fullName>B_What_services_were_offered_efforts__c</fullName>
    <inlineHelpText>B. What services were offered efforts made to prevent removal/assure child safety(active or  prior case)?</inlineHelpText>
    <label>B. What services were offered efforts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>