force-app/main/default/objects/Court__c/fields/Being_Date__c.field-meta.xml
<CustomField>
    <fullName>Being_Date__c</fullName>
    <label>Being Date</label>
    <type>Date</type>
</CustomField>