force-app/main/default/objects/Court__c/fields/C_Status_of_sibling_s_relationship__c.field-meta.xml
<CustomField>
    <fullName>C_Status_of_sibling_s_relationship__c</fullName>
    <inlineHelpText>C. Status of sibling&apos;s relationship with parent&apos;s: (mother/father)</inlineHelpText>
    <label>C. Status of sibling&apos;s relationship</label>
    <length>50</length>
    <type>Text</type>
</CustomField>