force-app/main/default/objects/Court__c/fields/C_What_Services_were_offered_prior__c.field-meta.xml
<CustomField>
    <fullName>C_What_Services_were_offered_prior__c</fullName>
    <inlineHelpText>C. What Services were offered prior to removal: (for every checked item, please explain)</inlineHelpText>
    <label>C. What Services were offered prior</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monitored child safety through in-Home Services</fullName>
            </value>
            <value>
                <fullName>Offered/provided Child Welfare Services</fullName>
            </value>
            <value>
                <fullName>Connected family member to medical services/provided necessary monitoring</fullName>
            </value>
            <value>
                <fullName>Connected (mother/father) to parenting classes/provided necessary monitoring</fullName>
            </value>
            <value>
                <fullName>Connected (mother/father) to substance use disorder screening and treatment/provided necessary monitoring</fullName>
            </value>
            <value>
                <fullName>Connected family member to mental health services/provided necessary monitoring</fullName>
            </value>
            <value>
                <fullName>Explored relative/other placement resources</fullName>
            </value>
            <value>
                <fullName>Other- specify (transportation, respire, child care, etc.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>