force-app/main/default/objects/Court__c/fields/Case_Period__c.field-meta.xml
<CustomField>
    <fullName>Case_Period__c</fullName>
    <label>Case Period</label>
    <type>Date</type>
</CustomField>