force-app/main/default/objects/Court__c/fields/Case_Worker_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Worker_Phone_Number__c</fullName>
    <label>Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>