force-app/main/default/objects/Court__c/fields/Child_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Child_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child&apos;s Attorney</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.Service_Case__c</field>
            <operation>equals</operation>
            <valueField>$Source.Service_Case__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Service_Case__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Petitions (Child&apos;s Attorney)</relationshipLabel>
    <relationshipName>Petitions6</relationshipName>
    <type>Lookup</type>
</CustomField>