force-app/main/default/objects/Court__c/fields/Child_in_Shelter_Care_on__c.field-meta.xml
<CustomField>
    <fullName>Child_in_Shelter_Care_on__c</fullName>
    <label>8.Child in Shelter Care on</label>
    <type>Date</type>
</CustomField>