force-app/main/default/objects/Court__c/fields/Child_s_Current_placement_if_not_foster__c.field-meta.xml
<CustomField>
    <fullName>Child_s_Current_placement_if_not_foster__c</fullName>
    <inlineHelpText>2.Child&apos;s Current placement (If not foster home) :</inlineHelpText>
    <label>2.Child&apos;s Current placement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kin Home</fullName>
                <default>true</default>
                <label>Kin Home</label>
            </value>
            <value>
                <fullName>Foster Home</fullName>
            </value>
            <value>
                <fullName>Group Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>