force-app/main/default/objects/Court__c/fields/CINA_TPR_respondent_siblings__c.field-meta.xml
<CustomField>
    <fullName>CINA_TPR_respondent_siblings__c</fullName>
    <label>CINA/TPR- respondent/siblings:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>