force-app/main/default/objects/Court__c/fields/Client_Name_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Name_Case_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Petitions (Client Name)</relationshipLabel>
    <relationshipName>Petitions7</relationshipName>
    <type>Lookup</type>
</CustomField>