force-app/main/default/objects/Court__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>