force-app/main/default/objects/Court__c/fields/Court__c.field-meta.xml
<CustomField>
    <fullName>Court__c</fullName>
    <label>Court</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No further involvement with court</fullName>
            </value>
            <value>
                <fullName>Exception/Appeal Filed</fullName>
            </value>
            <value>
                <fullName>Is there another court hearing Scheduled?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>