force-app/main/default/objects/Court__c/fields/Court_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Court_Case_Number__c</fullName>
    <label>Court Case Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>