force-app/main/default/objects/Court__c/fields/Court_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Court_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>