force-app/main/default/objects/Court__c/fields/court_order_approve_a_delay__c.field-meta.xml
<CustomField>
    <fullName>court_order_approve_a_delay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>court order approve a delay</label>
    <type>Checkbox</type>
</CustomField>