force-app/main/default/objects/Court__c/fields/Court_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Court_Order_Date__c</fullName>
    <label>Court Order Date</label>
    <type>DateTime</type>
</CustomField>