force-app/main/default/objects/Court__c/fields/Court_order_delay_removal__c.field-meta.xml
<CustomField>
    <fullName>Court_order_delay_removal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Court order delay removal</label>
    <type>Checkbox</type>
</CustomField>