force-app/main/default/objects/Court__c/fields/Court_order_delay_removal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Court_order_delay_removal_Comments__c</fullName>
    <label>Court_order_delay_removal_Comments</label>
    <type>TextArea</type>
</CustomField>