force-app/main/default/objects/Court__c/fields/Court_Order_Details__c.field-meta.xml
<CustomField>
    <fullName>Court_Order_Details__c</fullName>
    <label>Court Order Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>