force-app/main/default/objects/Court__c/fields/Court_Order_Received_By_LDSS__c.field-meta.xml
<CustomField>
    <fullName>Court_Order_Received_By_LDSS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Court Order Received By LDSS</label>
    <type>Checkbox</type>
</CustomField>