force-app/main/default/objects/Court__c/fields/Court_Order_Received_By_LDSS_Comments__c.field-meta.xml
<CustomField>
    <fullName>Court_Order_Received_By_LDSS_Comments__c</fullName>
    <label>Court_Order_Received_By_LDSS_Comments</label>
    <type>TextArea</type>
</CustomField>