force-app/main/default/objects/Court__c/fields/Court_order_specifies_who_the_child__c.field-meta.xml
<CustomField>
    <fullName>Court_order_specifies_who_the_child__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Court order specifies who the child was physically and/or legally removed from and the date the child last resided with the legal custodian</inlineHelpText>
    <label>Court order specifies who the child</label>
    <type>Checkbox</type>
</CustomField>