force-app/main/default/objects/Court__c/fields/Court_Ordered_Language_Details__c.field-meta.xml
<CustomField>
    <fullName>Court_Ordered_Language_Details__c</fullName>
    <label>Court Ordered Language Details</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Continuation of the child in the child&apos;s home is not contrary to the child&apos;s welfare</fullName>
            </value>
            <value>
                <fullName>Continuation of the child in the child&apos;s home is contrary to the child&apos;s welfare</fullName>
            </value>
            <value>
                <fullName>Due to emergency nature of the situation, reasonable efforts could not be made</fullName>
            </value>
            <value>
                <fullName>Reasonable efforts were made to prevent removal</fullName>
            </value>
            <value>
                <fullName>Reasonable efforts were not made to prevent removal</fullName>
            </value>
            <value>
                <fullName>Court has waived reunification efforts</fullName>
            </value>
            <value>
                <fullName>Reasonable efforts were made to finalize the child&apos;s permanency plan</fullName>
            </value>
            <value>
                <fullName>Reasonable efforts were not made to finalize the child&apos;s permanency plan</fullName>
            </value>
            <value>
                <fullName>Permanency plan of reunification may be changed to another permanency plan</fullName>
            </value>
            <value>
                <fullName>Voluntary placement is in the best interest of the child</fullName>
            </value>
            <value>
                <fullName>Voluntary placement is not in the best interest of the child</fullName>
            </value>
            <value>
                <fullName>Reasonable efforts were unable to be determined</fullName>
            </value>
            <value>
                <fullName>Court order specifies who the child was physically and/or legally removed from and the date the child last resided with the legal custodian</fullName>
            </value>
            <value>
                <fullName>Court order delay removal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>