force-app/main/default/objects/Court__c/fields/Court_Orders_are_not_signed_by_the_judge__c.field-meta.xml
<CustomField>
    <fullName>Court_Orders_are_not_signed_by_the_judge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Court Orders are not signed by the judge</label>
    <type>Checkbox</type>
</CustomField>