force-app/main/default/objects/Court__c/fields/Court_Petition_ID__c.field-meta.xml
<CustomField>
    <fullName>Court_Petition_ID__c</fullName>
    <label>Court Petition ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>