force-app/main/default/objects/Court__c/fields/Court_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Court_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>