force-app/main/default/objects/Court__c/fields/CTW_Decision__c.field-meta.xml
<CustomField>
    <fullName>CTW_Decision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CTW_Decision</label>
    <type>Checkbox</type>
</CustomField>