force-app/main/default/objects/Court__c/fields/D_Special_needs_of_Respondent__c.field-meta.xml
<CustomField>
    <fullName>D_Special_needs_of_Respondent__c</fullName>
    <label>D. Special needs of Respondent:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical,including need for the medication</fullName>
            </value>
            <value>
                <fullName>Psychological</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>