force-app/main/default/objects/Court__c/fields/D_Were_reasonable_efforts_not_made__c.field-meta.xml
<CustomField>
    <fullName>D_Were_reasonable_efforts_not_made__c</fullName>
    <inlineHelpText>D. Were reasonable efforts not made because emergency circumstance existed requiring removal to protect the safety of the child?</inlineHelpText>
    <label>D. Were reasonable efforts not made</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>