force-app/main/default/objects/Court__c/fields/Date_of_Emergency_Shelter_Care__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Emergency_Shelter_Care__c</fullName>
    <label>9.Date of Emergency Shelter Care</label>
    <type>Date</type>
</CustomField>