force-app/main/default/objects/Court__c/fields/Date_Of_Next_Hearing__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Next_Hearing__c</fullName>
    <label>Date_Of_Next_Hearing</label>
    <type>Date</type>
</CustomField>