force-app/main/default/objects/Court__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Close case</fullName>
                <default>true</default>
                <label>Close case</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>