force-app/main/default/objects/Court__c/fields/Desicion_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Desicion_Recommendation__c</fullName>
    <label>Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>InProgress</fullName>
            </value>
            <value>
                <fullName>Order of Shelter Care</fullName>
            </value>
            <value>
                <fullName>Order of Protective Supervision</fullName>
            </value>
            <value>
                <fullName>Commitment</fullName>
            </value>
            <value>
                <fullName>Custody and Guardianship</fullName>
            </value>
            <value>
                <fullName>Termination of Parental Rights</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>