force-app/main/default/objects/Court__c/fields/Desicion_Role__c.field-meta.xml
<CustomField>
    <fullName>Desicion_Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supervisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>