force-app/main/default/objects/Court__c/fields/Documentation_of_injury__c.field-meta.xml
<CustomField>
    <fullName>Documentation_of_injury__c</fullName>
    <label>Documentation of injury</label>
    <length>255</length>
    <type>Text</type>
</CustomField>