force-app/main/default/objects/Court__c/fields/Does_this_information_exist__c.field-meta.xml
<CustomField>
    <fullName>Does_this_information_exist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does this information exist?</label>
    <type>Checkbox</type>
</CustomField>