force-app/main/default/objects/Court__c/fields/E_A_Family_Involvement_Meeting__c.field-meta.xml
<CustomField>
    <fullName>E_A_Family_Involvement_Meeting__c</fullName>
    <inlineHelpText>E. A Family Involvement Meeting:</inlineHelpText>
    <label>E. A Family Involvement Meeting:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Held</fullName>
                <default>true</default>
                <label>Held</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>