force-app/main/default/objects/Court__c/fields/Emergency_Non_Emergency__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Non_Emergency__c</fullName>
    <label>Emergency/Non-Emergency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Non-Emergency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>