force-app/main/default/objects/Court__c/fields/Extension_Code__c.field-meta.xml
<CustomField>
    <fullName>Extension_Code__c</fullName>
    <label>Extension Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>