force-app/main/default/objects/Court__c/fields/Failed_to_protect_mother_father__c.field-meta.xml
<CustomField>
    <fullName>Failed_to_protect_mother_father__c</fullName>
    <label>Failed to protect:(mother/father)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>