force-app/main/default/objects/Court__c/fields/For_each_subpoena_is_a_release__c.field-meta.xml
<CustomField>
    <fullName>For_each_subpoena_is_a_release__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For each subpoena, is a release or consent necessary? is it in the file?</inlineHelpText>
    <label>For each subpoena, is a release</label>
    <type>Checkbox</type>
</CustomField>