force-app/main/default/objects/Court__c/fields/Foster_Home__c.field-meta.xml
<CustomField>
    <fullName>Foster_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foster Home</label>
    <type>Checkbox</type>
</CustomField>