force-app/main/default/objects/Court__c/fields/Group_Home__c.field-meta.xml
<CustomField>
    <fullName>Group_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group Home</label>
    <type>Checkbox</type>
</CustomField>