force-app/main/default/objects/Court__c/fields/Hearing_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Client_Name__c</fullName>
    <label>Client Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>