force-app/main/default/objects/Court__c/fields/Hearing_Date__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Date__c</fullName>
    <label>Hearing Date</label>
    <type>Date</type>
</CustomField>